Fixed start and end fields spacing  (event form) on mobile.

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -313,9 +313,8 @@ hr {
 }
 
 .form-group > .col-sm-6 {
-  margin-bottom: 15px;
-  @media (min-width: $screen-sm-max) {
-    margin-bottom: 0;
+  @media (max-width: $screen-sm-max) {
+    margin-bottom: 15px;
   }
 }
 
